--- a/react/react-guide/package.json
+++ b/react/react-guide/package.json
@@ -6,7 +6,8 @@
     "radium": "^0.25.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "1.1.5"
+    "react-scripts": "1.1.5",
+    "react-snap": "^1.23.0"
   },
   "scripts": {
     "start": "react-scripts start",
