--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ react/*/node_modules/*
 # API keys
 node/weather-app/*key.txt
 node/web-server/*key.txt
+node/task-manager/src/emails/*key.txt
 
 # Task Manager
 node/task-manager/images/
