--- a/node/task-manager/package.json
+++ b/node/task-manager/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "nodemon src/index.js -e js,hbs,css"
+    "dev": "env-cmd ./config/dev.env nodemon src/index.js -e js,hbs,css"
   },
   "keywords": [],
   "author": "",
