--- a/node/task-manager/package.json
+++ b/node/task-manager/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node src/index.js",
+    "start": "env-cmd ./config/prod.env node src/index.js",
     "dev": "env-cmd ./config/dev.env nodemon src/index.js -e js,hbs,css"
   },
   "keywords": [],
