--- a/node/task-manager/package.json
+++ b/node/task-manager/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "env-cmd ./config/prod.env node src/index.js",
-    "dev": "env-cmd ./config/dev.env nodemon src/index.js -e js,hbs,css"
+    "dev": "env-cmd ./config/dev.env nodemon src/index.js -e js,hbs,css",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -24,6 +25,7 @@
   },
   "devDependencies": {
     "env-cmd": "^8.0.2",
+    "jest": "^23.6.0",
     "nodemon": "^1.18.9"
   }
 }
