--- a/node/task-manager/package.json
+++ b/node/task-manager/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "env-cmd ./config/prod.env node src/index.js",
     "dev": "env-cmd ./config/dev.env nodemon src/index.js -e js,hbs,css",
-    "test": "jest"
+    "test": "jest --watchAll"
   },
   "keywords": [],
   "author": "",
