--- a/node/task-manager/package.json
+++ b/node/task-manager/package.json
@@ -8,6 +8,9 @@
     "dev": "env-cmd ./config/dev.env nodemon src/index.js -e js,hbs,css",
     "test": "env-cmd ./config/test.env jest --watchAll"
   },
+  "jest": {
+    "testEnvironment": "node"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
