--- a/node/chat-app/package.json
+++ b/node/chat-app/package.json
@@ -4,7 +4,8 @@
   "description": "Chat App",
   "main": "src/index.js",
   "scripts": {
-    "start": "env-cmd ./config/test.env node ./src/index.js"
+    "test": "env-cmd ./config/test.env node ./src/index.js",
+    "start": "env-cmd ./confix/prod.env node ./src/index.js"
   },
   "author": "Robby",
   "license": "ISC"
