--- a/node/chat-app/package.json
+++ b/node/chat-app/package.json
@@ -11,5 +11,11 @@
   "license": "ISC",
   "devDependencies": {
     "nodemon": "^1.19.1"
+  },
+  "dependencies": {
+    "env-cmd": "^8.0.2",
+    "express": "^4.16.4",
+    "nodejs": "^0.0.0",
+    "socket.io": "^2.2.0"
   }
 }
