--- a/node/chat-app/package.json
+++ b/node/chat-app/package.json
@@ -16,6 +16,7 @@
     "env-cmd": "^8.0.2",
     "express": "^4.16.4",
     "nodejs": "^0.0.0",
-    "socket.io": "^2.2.0"
+    "socket.io": "^2.2.0",
+    "bad-words": "^3.0.0"
   }
 }
