--- a/react/indecision-app/package.json
+++ b/react/indecision-app/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "babel src/app.js --out-file=public/scripts/app.js --presets=env,react --watch"
   },
   "author": "",
   "license": "ISC",
