--- a/react/indecision-app/package.json
+++ b/react/indecision-app/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "live-server ./public",
-    "build": "babel src/app.js --out-file=public/scripts/app.js --presets=env,react --watch"
+    "serve": "live-server ./public",
+    "build": "babel src/app.js --out-file=public/scripts/app.js --presets=env,react --watch",
 
   },
   "author": "",
