--- a/react/indecision-app/package.json
+++ b/react/indecision-app/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "serve": "live-server ./public",
     "build-babel": "babel src/app.js --out-file=public/scripts/app.js --presets=env,react --watch",
-    "build": "webpack"
+    "build": "webpack --watch"
   },
   "author": "",
   "license": "ISC",
