--- a/react/indecision-app/package.json
+++ b/react/indecision-app/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "babel-preset-env": "^1.5.2",
+    "validator": "^8.0.0",
     "babel-preset-react": "^6.24.1"
   },
   "devDependencies": {
