--- a/react/indecision-app/package.json
+++ b/react/indecision-app/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "babel-preset-env": "^1.5.2",
     "validator": "^8.0.0",
-    "babel-preset-react": "^6.24.1"
+    "babel-preset-react": "^6.24.1",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
