--- a/react/indecision-app/package.json
+++ b/react/indecision-app/package.json
@@ -15,7 +15,8 @@
     "validator": "^8.0.0",
     "babel-preset-react": "^6.24.1",
     "react": "^16.0.0",
-    "react-dom": "^16.0.0"
+    "react-dom": "^16.0.0",
+    "babel-core": "^6.25.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
