--- a/react/indecision-app/package.json
+++ b/react/indecision-app/package.json
@@ -16,7 +16,8 @@
     "babel-preset-react": "^6.24.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "babel-core": "^6.25.0"
+    "babel-core": "^6.25.0",
+    "babel-loader": "7.1.1"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
