--- a/react/indecision-app/package.json
+++ b/react/indecision-app/package.json
@@ -17,7 +17,8 @@
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "babel-core": "^6.25.0",
-    "babel-loader": "7.1.1"
+    "babel-loader": "^7.1.1",
+    "webpack-dev-server": "^2.5.1"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
