--- a/react/indecision-app/package.json
+++ b/react/indecision-app/package.json
@@ -20,7 +20,9 @@
     "babel-loader": "^7.1.1",
     "webpack-dev-server": "^2.5.1",
     "babel-plugin-transform-class-properties": "^6.24.1",
-    "react-modal": "^2.2.2"
+    "react-modal": "^2.2.2",
+    "style-loader": "^0.18.2",
+    "css-loader": "^0.28.4"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
