--- a/react/indecision-app/package.json
+++ b/react/indecision-app/package.json
@@ -22,7 +22,9 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "react-modal": "^2.2.2",
     "style-loader": "^0.18.2",
-    "css-loader": "^0.28.4"
+    "css-loader": "^0.28.4",
+    "sass-loader": "^6.0.6",
+    "node-sass": "^4.5.3"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
