--- a/react/indecision-app/package.json
+++ b/react/indecision-app/package.json
@@ -24,7 +24,8 @@
     "style-loader": "^0.18.2",
     "css-loader": "^0.28.4",
     "sass-loader": "^6.0.6",
-    "node-sass": "^4.5.3"
+    "node-sass": "^4.5.3",
+    "normalize.css": "^7.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
