--- a/react/expensify-app/package.json
+++ b/react/expensify-app/package.json
@@ -25,7 +25,8 @@
     "css-loader": "^0.28.4",
     "sass-loader": "^6.0.6",
     "node-sass": "^4.5.3",
-    "normalize.css": "^7.0.0"
+    "normalize.css": "^7.0.0",
+    "react-router-dom": "^4.2.2"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
