--- a/react/expensify-app/package.json
+++ b/react/expensify-app/package.json
@@ -27,7 +27,8 @@
     "node-sass": "^4.5.3",
     "normalize.css": "^7.0.0",
     "react-router-dom": "^4.2.2",
-    "redux": "^3.7.2"
+    "redux": "^3.7.2",
+    "uuid": "^3.1.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
