install babel-plugin-transform-object-rest-spread

--- a/react/expensify-app/package.json
+++ b/react/expensify-app/package.json
@@ -28,7 +28,8 @@
     "normalize.css": "^7.0.0",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
-    "uuid": "^3.1.0"
+    "uuid": "^3.1.0",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
