add enzyme support for test command

--- a/react/expensify-app/package.json
+++ b/react/expensify-app/package.json
@@ -7,7 +7,7 @@
     "serve": "live-server ./public",
     "build": "webpack",
     "dev-server": "webpack-dev-server --watch",
-    "test": "jest"
+    "test": "jest --config=jest.config.json"
   },
   "author": "",
   "license": "ISC",
