--- a/react/expensify-app/package.json
+++ b/react/expensify-app/package.json
@@ -1,15 +1,17 @@
 {
   "name": "expensify-app",
   "version": "1.0.0",
-  "description": "",
+  "description": "expensify udemy project",
   "main": "index.js",
   "scripts": {
     "serve": "live-server ./public",
-    "build": "webpack",
+    "build:dev": "webpack",
+    "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server --watch",
-    "test": "jest --config=jest.config.json"
+    "test": "jest --config=jest.config.json",
+    "deploy:firebase": "npm run build:prod & firebase deploy"
   },
-  "author": "",
+  "author": "RobbyB97",
   "license": "ISC",
   "dependencies": {
     "babel-core": "^6.25.0",
