--- a/react/portfolio-site/package.json
+++ b/react/portfolio-site/package.json
@@ -5,8 +5,10 @@
   "main": "index.js",
   "scripts": {
     "serve": "live-server ./public",
-    "build": "webpack",
-    "dev-server": "webpack-dev-server"
+    "build:dev": "webpack",
+    "build:prod": "webpack -p --env production",
+    "dev-server": "webpack-dev-server",
+    "deploy:firebase": "npm run build:prod & firebase deploy"
   },
   "author": "",
   "license": "ISC",
