--- a/node/task-manager/package.json
+++ b/node/task-manager/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "env-cmd ./config/prod.env node src/index.js",
+    "start": "node src/index.js",
     "dev": "env-cmd ./config/dev.env nodemon src/index.js -e js,hbs,css",
     "test": "env-cmd ./config/test.env jest --watchAll --runInBand"
   },
@@ -23,7 +23,6 @@
     "mongodb": "^3.1.10",
     "mongoose": "^5.3.16",
     "multer": "^1.4.1",
-    "sharp": "^0.21.1",
     "validator": "^10.9.0"
   },
   "devDependencies": {
