--- a/complete-electron/videoinfo/package.json
+++ b/complete-electron/videoinfo/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "electron": "^10.1.5"
+    "electron": "^10.1.5",
+    "fluent-ffmpeg": "^2.1.2"
   }
 }
