--- a/docker/redis-image/Dockerfile
+++ b/docker/redis-image/Dockerfile
@@ -4,6 +4,7 @@ FROM alpine
 
 # Download and install dependency
 RUN apk add --update redis
+RUN apk add --update gcc
 
 
 # Tell image what to do when it starts as a container
