--- a/docker/simpleweb/Dockerfile
+++ b/docker/simpleweb/Dockerfile
@@ -1,9 +1,9 @@
 # Specify a base image
 FROM node:alpine
 
-WORKDIR /usr/app
-
 # Install npm dependencies
+WORKDIR /usr/app
+COPY ./ ./
 RUN npm install
 
 # Default command
